# murphys_law

./: .gitignore  ROADMAP.md  config.py  db.py  ib_data.py  ib_exec.py  indicators.py  main.py  migrate.py  monitor.py  order_manager.py  portfolio_state.py  pyproject.toml  risk_engine.py  scheduler.py  signals.py  td_data.py  tools.py  universe.py
.claude/: settings.json
reference/: v300.py
tests/: test_ib_data.py  test_ib_exec.py  test_indicators.py  test_main.py  test_monitor.py  test_order_manager.py  test_portfolio_state.py  test_risk_engine.py  test_scheduler.py  test_signals.py  test_td_data.py  test_universe.py
