[project]
name = "murphys-law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "ibapi>=9.81.1.post1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-market-calendars>=5.3.1.2",
    "pytest>=9.0.2",
]
